<resources>
    <string name="app_name">TravelerPractice</string>
    <string name="asai">Asai</string>
    <string name="africa">Africa</string>
    <string name="europe">Europe</string>
    <string name="northAmeria">North Ameria</string>
    <string name="southAmeria">South Ameria</string>

    <string name="google_map_api_key">AIzaSyBKlBjLucdgxetfpHYG552YX2xAzdrVFdY</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a_diary_is_a_record_originally_in_handwritten_format_with_discrete_entries_arranged_by_date_reporting_on_what_has_happened_over_the_course_of_a_day_or_other_period_a_personal_diary_may_include_a_person_s_experiences_thoughts_and_or_feelings_excluding_comments_on_current_events_outside_the_writer_s_direct_experience_someone_who_keeps_a_diary_is_known_as_a_diarist_diaries_undertaken_for_institutional_purposes_play_a_role_in_many_aspects_of_human_civilization_including_government_records_e_g_hansard_business_ledgers_and_military_records_in_british_english_the_word_may_also_denote_a_preprinted_journal_format_a_diary_is_a_collection_of_notes_today_the_term_is_generally_employed_for_personal_diaries_normally_intended_to_remain_private_or_to_have_a_limited_circulation_amongst_friends_or_relatives_the_word">A diary is a record (originally in handwritten format) with discrete entries arranged by date reporting on what has happened over the course of a day or other period. A personal diary may include a person\'s experiences, thoughts, and/or feelings, excluding comments on current events outside the writer\'s direct experience. Someone who keeps a diary is known as a diarist. Diaries undertaken for institutional purposes play a role in many aspects of human civilization, including government records (e.g. Hansard), business ledgers, and military records. In British English, the word may also denote a preprinted journal format. A diary is a collection of notes. Today the term is generally employed for personal diaries, normally intended to remain private or to have a limited circulation amongst friends or relatives. The word</string>
    <string name="title_activity_test">TestActivity</string>
</resources>
